@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
 
+2012-06-19 Steve
+	* Fixed event timer calculation
+	* Tagging SusyCommon-00-00-08
+
 2012-06-18 Steve
 	* Added PDFTool for reweighting 7 TeV -> 8 TeV
 	* Added switch in Makefile for controlling PDFTool usage.
@@ -7,7 +11,7 @@
 		* Requires corresponding switch to be set in MultiLep package as well
 	* Tagging SusyCommon-00-00-07
 
-2012-06-11 Steve
+2012-06-17 Steve
 	* Added TStopwatch for monitoring processing time
 
 2012-06-11 Steve
